# app/models.py
@@ -2,11 +2,12 @@ from sqlalchemy import Column, String, Integer, Boolean, DateTime
 from sqlalchemy.sql import func
 from app.database import Base
 
+
 class User(Base):
-    __tablename__ = 'users'
+    __tablename__ = "users"
     id = Column(Integer, primary_key=True, index=True)
     email = Column(String(255), unique=True, index=True, nullable=False)
-    password = Column(String(255), nullable=False) 
+    password = Column(String(255), nullable=False)
     salt = Column(String(255), nullable=False)
     username = Column(String(255), unique=True, index=True, nullable=False)
     first_name = Column(String(255), nullable=True)
